                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 01-07-2005 changed: Removed the need for HasDefaultThumbnail() and so on - if no thumb exists, thumbviews now show the large version of the icon at render time.
 - 01-07-2005 added: Window methods getResolution() and setCoordinateResolution() to python interface.  Should allow XBMC to scale control sizes and positions, removing the burden off python coders.
 - 30-06-2005 added: Background thumb reader for My Pictures.  Creates thumbs on enter of dir in the background as needed.
 - 30-06-2005 fixed: nfo files weren't being utilized if available for movie information.
 - 30-06-2005 changed: Image library moved into a dll.  Means smaller xbe, and faster image loading and tag generation off network shares due to not having to cache pictures locally before displaying them.  Requires ImageLib.dll to be in system folder.
 - 28-06-2005 changed: keymap.xml format is now much simpler to understand.
 - 28-06-2005 fixed: FTP server could corrupt files on send in some (fairly rare) scenarios.
 - 28-06-2005 changed: Keymap.xml format has changed.  Hopefully easier to understand for newcomers.
 - 28-06-2005 fixed: Thumbnail orientation rotates using the EXIF information.
 - 28-06-2005 added: Thumbnail generation of pics uses embedded thumbnails (EXIF) in jpgs.
 - 28-06-2005 changed: SEEKING to Left Thumbstick in keymap.xml
 - 27-06-2005 added: Support for running xbe's off Q:
 - 27-06-2005 changed: Large IMDb information (plots etc.) no longer stored in the video database - they are now stored in albums/imdb.
 - 27-06-2005 fixed: HttpApi: ExecBuiltIn is more reliable and RestartApp now works